tests/ui/runtime-fluent-witness-types-removed.stderr
error[E0432]: unresolved imports `hibana::runtime::RoleKit`, `hibana::runtime::SessionRendezvousKit`, `hibana::runtime::SessionRoleKit`
 --> tests/ui/runtime-fluent-witness-types-removed.rs:1:23
  |
1 | use hibana::runtime::{RoleKit, SessionRendezvousKit, SessionRoleKit};
  |                       ^^^^^^^  ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^ no `SessionRoleKit` in `runtime`
  |                       |        |
  |                       |        no `SessionRendezvousKit` in `runtime`
  |                       no `RoleKit` in `runtime`
  |
help: a similar name exists in the module
  |
1 - use hibana::runtime::{RoleKit, SessionRendezvousKit, SessionRoleKit};
1 + use hibana::runtime::{RoleKit, SessionRendezvousKit, SessionKit};
  |
